<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="#AFEDB0"
        android:padding="15dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:textAlignment="center">

                <Button
                    android:id="@+id/goHomeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B0E2FB"
                    android:drawableTop="@drawable/gohome_origin"
                    android:padding="8dp"
                    android:text="@string/go_home"
                    android:textAllCaps="false"
                    android:textColor="#B71C1C"
                    app:cornerRadius="20dp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/getUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B8B255"
                    android:drawableTop="@drawable/wakeup_origin"
                    android:padding="8dp"
                    android:text="@string/get_up"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/allDevicesButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checkable="false"
                            android:maxLines="1"
                            android:text="@string/all_devices"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/livingRoomButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/living_room"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/dinningRoomButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:text="@string/dinning_room"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/bedRoom"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bed_room"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/kitchenButton"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/kitchen"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </HorizontalScrollView>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layoutDirection="ltr"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:minWidth="150dp"
                                android:padding="10dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/temperature_sensor_1"
                                        android:textSize="12sp" />

                                    <ImageView
                                        android:id="@+id/imageView2"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_gravity="end"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/temp_sens" />
                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <View
                                android:id="@+id/divider5"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:layoutDirection="ltr"
                                android:minWidth="150dp"
                                android:padding="10dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/lamp_1_t"
                                        android:textSize="12sp" />

                                    <ImageView
                                        android:id="@+id/imageView"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_gravity="end"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/light_on" />
                                </LinearLayout>

                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layoutDirection="ltr"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:minWidth="150dp"
                                android:padding="10dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/lamp_2"
                                        android:textSize="12sp" />

                                    <ImageView
                                        android:id="@+id/imageView3"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_gravity="end"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/off_lamp" />
                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <View
                                android:id="@+id/divider8"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:minWidth="150dp"
                                android:padding="10dp"
                                app:cardCornerRadius="10dp"
                                app:contentPadding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/light_sensor_1"
                                        android:textSize="12sp" />

                                    <ImageView
                                        android:id="@+id/imageView4"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_gravity="end"
                                        android:contentDescription="Light Sensor"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/light_sens" />
                                </LinearLayout>

                            </androidx.cardview.widget.CardView>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>